<resources>
    <string name="app_name">Daver</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="register_fragment_label">Register Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="main_fragment_label">Main Fragment</string>
    <string name="first_lost_pw_label">First Lost Pw Fragment</string>
    <string name="second_lost_pw_label">Second Lost Pw Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="로그인" />
    <string name="login">로그인</string>
    <string name="goto_login">로그인 하기</string>
    <string name="goto_register">회원가입 하기</string>
    <string name="lost_pw">비밀번호를 잃어버리셨나요?</string>
    <string name="lost_pw_button">비밀번호 찾기</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">이름</string>
    <string name="register">회원가입</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="already_user">이미 회원이신가요?</string>
    <string name="not_user">회원이 아니신가요?</string>
    <string name="title_lost_pw">비밀번호 찾기</string>
    <string name="text_input_password">찾고 있는 비밀번호의 아이디를 입력해 주세요</string>
    <string name="text_next">다음</string>
    <string name="text_reset_password">비밀번호를 재설정 하세요</string>
    <string name="text_finish">완료</string>
</resources>