<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">


    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/app_name"
        android:layout_width="138dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_daver"
        app:layout_constraintBottom_toTopOf="@+id/login_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <EditText
        android:id="@+id/login_id"
        android:layout_width="330dp"
        android:layout_height="53dp"
        android:background="@drawable/rectangle"
        android:elevation="5dp"
        android:padding="10dp"
        android:hint="@string/id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <EditText
        android:id="@+id/login_pw"
        android:layout_width="330dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"
        android:elevation="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_id" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="330dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="120dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pw"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lost_pw_button"
        android:layout_width="109dp"
        android:layout_height="26dp"
        android:text="@string/lost_pw_button"
        android:textColor="@color/purple_500"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/lost_pw"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/lost_pw"
        android:layout_width="179dp"
        android:layout_height="25dp"
        android:text="@string/lost_pw"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.101" />

    <View
        android:id="@+id/nav_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="672dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/not_user"
        android:layout_width="179dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/not_user"
        android:textColor="@color/gray"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_line"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/not_user_button"
        android:layout_width="109dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/goto_register"
        android:textColor="@color/purple_500"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/not_user"
        app:layout_constraintTop_toBottomOf="@+id/nav_line"
        app:layout_constraintVertical_bias="0.24" />

</androidx.constraintlayout.widget.ConstraintLayout>